Bug 361991 - No possibility to change how a contact is shown since 16.04RC
Summary: No possibility to change how a contact is shown since 16.04RC
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-20 06:27 UTC by Robby Engelmann
Modified: 2016-05-19 12:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3
Sentry Crash Report:


Attachments
how contact is shown before I changed the name (96.36 KB, image/png)
2016-05-12 07:09 UTC, Robby Engelmann
Details
how contact is shown after I changed the name (97.01 KB, image/png)
2016-05-12 07:10 UTC, Robby Engelmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2016-04-20 06:27:36 UTC
There is no obvious possibility anymore to change how a contact is shown in the contacts list. Furthermore, after modifying a name this is not shown in the contact preview pane, but is only shown when opening the contact.
Possibly two separate bugs?

Reproducible: Always
Comment 1 Laurent Montel 2016-05-12 05:08:06 UTC
What is missing ?
Could you provide screenshot for ir ?
Comment 2 Robby Engelmann 2016-05-12 07:09:49 UTC
Created attachment 98927 [details]
how contact is shown before I changed the name
Comment 3 Robby Engelmann 2016-05-12 07:10:16 UTC
Created attachment 98928 [details]
how contact is shown after I changed the name
Comment 4 Robby Engelmann 2016-05-12 07:12:34 UTC
As you can see in the screenshots the name in the contacts list is not updated properly after I change the name to Janine2. However, it is shown correctly when I open the contact.
I noticed that this is valid only for contacts that I did not newly add. For newly added contacts it works fine...strange.
I am using a vcard folder as ressource.
Comment 5 Robby Engelmann 2016-05-17 09:10:08 UTC
also valid for Personal Contacts ressource. I imported vcards to a newly generated Personal Contacts ressource. After that the same is happening. I can change the name, but it is not updated in the contacts list pane. Adding a new contact to that addressbook and changing the name works.
Comment 6 Robby Engelmann 2016-05-18 15:12:26 UTC
I think I found the culprit:
The name shown in the list is the FN: field of the respective vcard in the ressource, if this field is present.
The name in the dialog when I open the contact is represented by the N: field.

When I change the name in the dialog, N field is updated fine, but the FN field remains as it is in the respective vcard. Thus the shown name in the contact list is not updated. It seems to be an issue with the vcard handling here.
If the FN field is missing in the vcard, as it is the case for newly added contacts, the N field is probably shown in the contact list.

In kaddressbook version 15.12 I think, there was a field within the contact dialog, that represented the FN field. But this option is missing since 16.04.
According to https://de.wikipedia.org/wiki/VCard the FN field is mandatory since vcard version 3.0. This seems to be bug in kaddressbook for sure.
Comment 7 Laurent Montel 2016-05-19 05:18:59 UTC
You're right FN was removed as it made it too complex UI.
I will look at how to readd it but not sure how.
Comment 8 Laurent Montel 2016-05-19 06:58:38 UTC
Git commit b39d5300673fc69e8c04c0a819d6ca45a2ec2f4c by Montel Laurent.
Committed on 19/05/2016 at 06:58.
Pushed by mlaurent into branch 'master'.

Fix Bug 361991 - No possibility to change how a contact is shown since 16.04RC

FIXED-IN: 5.3

M  +1    -0    akonadi-contact/src/editor/generalinfoeditor/namewidget.cpp

http://commits.kde.org/kdepimlibs/b39d5300673fc69e8c04c0a819d6ca45a2ec2f4c
Comment 9 Robby Engelmann 2016-05-19 12:34:36 UTC
Thanks for the patch. As I am not a programmer, could you perhaps explain shortly what the patch changed and in which version I could expect the patch being included (16.04.2 or the next major release).
Thank you again :-)
Comment 10 Laurent Montel 2016-05-19 12:58:04 UTC
Next version 5.3 (16.08)
It was not possible to backport to 16.04.
All is ok for it now.

Regards