Fix Bug 361991 - No possibility to change how a contact is shown since 16.04RC

FIXED-IN: 5.3
BUG: 361991